--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
 
 [dependencies]
 hyper = "0.5.0"
+
+[dependencies.html5ever]
+git = "https://github.com/servo/html5ever"
