Example of HTML parsing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ hyper = "0.5.0"
 
 [dependencies.html5ever]
 git = "https://github.com/servo/html5ever"
+
+[dependencies.html5ever_dom_sink]
+git = "https://github.com/servo/html5ever"
+path = "dom_sink"
