--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,8 @@ authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
 
 [dependencies]
 hyper = "0.5.0"
-
-[dependencies.html5ever]
-git = "https://github.com/servo/html5ever"
-
-[dependencies.html5ever_dom_sink]
-git = "https://github.com/servo/html5ever"
-path = "dom_sink"
+html5ever = "*"
+tendril = "*"
 
 [dependencies.url]
 git = "https://github.com/servo/rust-url"
