--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,4 @@ authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
 hyper = "0.5.0"
 html5ever = "*"
 tendril = "*"
-
-[dependencies.url]
-git = "https://github.com/servo/rust-url"
+url = "*"
