--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
 
 [dependencies]
-hyper = "0.5.0"
+hyper = "*"
 html5ever = "*"
 tendril = "*"
 url = "*"
