--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "linkdoc"
 version = "0.2.0"
 authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
+edition = "2018"
 
 [dependencies]
 hyper = "0.10.1"
