--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
 edition = "2018"
 
 [dependencies]
-hyper = "0.10.1"
+reqwest = "0.9.22"
 html5ever = "0.21.0"
 url = "0.2.37"
