--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "linkdoc"
+description = "Walks all the web pages in a domain to find dead links."
 version = "0.2.0"
 authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
 edition = "2021"
@@ -9,6 +10,6 @@ reqwest = "0.9.22"
 scraper = "0.17.1"
 url = "2.4.1"
 colored = "2.0.4"
-clap = "3"
+clap = { version = "3", features = ["cargo", "wrap_help"] }
 crossbeam-channel = "0.4.0"
 crossbeam-utils = "0.7.0"
