--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
-reqwest = "0.9.22"
+reqwest = { version = "0.10", features = [ "blocking"] }
 scraper = "0.17.1"
 url = "2.4.1"
 colored = "2.0.4"
